other/resources/analytics/jupyterhub/jupyterhub-http-proxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: jupyterhub-httpproxy
  namespace: jupyterflow
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: proxy-public
      port: 80
  virtualhost:
    fqdn: jupyterhub.tanzumlai.com
